# test_fig_stdout

./: LICENSE  README.md  cleaner.sh  pyproject.toml
examples/: gkvp_namelist.001
examples/hst/: gkvp.bln.0.001  gkvp.dtc.001  gkvp.eng.001  gkvp.ges.0.001  gkvp.mtf.001  gkvp.qem.0.001  gkvp.qes.0.001  gkvp.wes.001
examples/log/: gkvp.000000.0.log.001
src/gkvfigpdf/: __init__.py  __main__.py  make_pdf.py
src/gkvfigpdf/utils/: build_text_section.py  calc_elt.py  calc_entropy_balance.py  parse_parameter_setting.py  plot_elt.py  plot_energy.py  plot_flux.py  plot_freq.py  plot_mtrf.py  plot_time_series.py
tests/: test_bzx.py  test_gkvfigpdf.py
tests/reference_data/: boozmn_tests.nc  input.tests  run_vmecpp_boozxform_bzx.py  wout_tests.nc
tests/test_data/: gkvp_namelist.001  run_gkvfigpdf.py
tests/test_data/hst/: gkvp.bln.0.001  gkvp.cst.001  gkvp.dtc.001  gkvp.eng.001  gkvp.ges.0.001  gkvp.mtr.001  gkvp.qem.0.001  gkvp.qes.0.001  gkvp.wes.001
tests/test_data/log/: gkvp.000000.0.log.001
